package ejercicio4.codigo;

public class Posicion {
    int fila, columna;

    public Posicion(int fila, int columna) {
        this.fila = fila;
        this.columna = columna;
    }
}
